--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     <section id="home" class="navbar">
       <div class="nav-flex" data-aos="fade-down" data-aos-offset="0">
         <a href="#home"
-          ><img src="/Images/main-logo.svg" alt="logo" class="icon"
+          ><img src="Images/main-logo.svg" alt="logo" class="icon"
         /></a>
 
         <a href="#" class="toggle-button">
@@ -62,13 +62,13 @@
     <!----- Our Services  ----->
     <section id="service" class="speciality">
       <div class="heading-secondary">
-        <img class="heading-top" src="/Images/heading-top.svg" alt="cone" />
+        <img class="heading-top" src="Images/heading-top.svg" alt="cone" />
         <h2>OUR service</h2>
       </div>
       <div class="item-container">
         <div class="service-img">
           <img
-            src="/Images/service-min.jpg"
+            src="Images/service-min.jpg"
             alt="cook"
             class="service-pic"
             data-aos="fade-up"
@@ -78,7 +78,7 @@
           <div class="items">
             <img
               class="item-1-svg"
-              src="/Images/birthday-cake.svg"
+              src="Images/birthday-cake.svg"
               alt="homemade"
             />
             <h3 class="heading-3">Birthday Parties</h3>
@@ -87,7 +87,7 @@
           <div class="items">
             <img
               class="item-1-svg"
-              src="/Images/wedding-cake.svg"
+              src="Images/wedding-cake.svg"
               alt="homemade"
             />
 
@@ -95,7 +95,7 @@
             <p>We do catering all from weddings to business functions.</p>
           </div>
           <div class="items">
-            <img class="item-1-svg" src="/Images/homemade.svg" alt="homemade" />
+            <img class="item-1-svg" src="Images/homemade.svg" alt="homemade" />
             <h3 class="heading-3">100% Homemade</h3>
             <p>
               All homemade.You can choose from a rich variety of cookies,
@@ -110,7 +110,7 @@
     <!----- Menu Items ----->
     <section id="menu" class="menu">
       <div class="heading-secondary">
-        <img class="heading-top" src="/Images/heading-top.svg" alt="cone" />
+        <img class="heading-top" src="Images/heading-top.svg" alt="cone" />
         <h2>OUR Menu</h2>
       </div>
 
@@ -120,7 +120,7 @@
           data-aos="zoom-in-down"
           data-aos-duration="500"
         >
-          <img src="/Images/cake-1-min.jpg" alt="cake" class="menu-image" />
+          <img src="Images/cake-1-min.jpg" alt="cake" class="menu-image" />
           <h4 class="heading-4">Vanilla cake</h4>
           <p>Birthday cake serves 10 people.</p>
         </div>
@@ -129,7 +129,7 @@
           data-aos="zoom-in-down"
           data-aos-duration="500"
         >
-          <img src="/Images/cake-2-min.jpg" alt="cake" class="menu-image" />
+          <img src="Images/cake-2-min.jpg" alt="cake" class="menu-image" />
           <h4 class="heading-4">creamy vanilla</h4>
           <p>wedding cake serves 30 people.</p>
         </div>
@@ -138,7 +138,7 @@
           data-aos="zoom-in-down"
           data-aos-duration="500"
         >
-          <img src="/Images/cake-4-min.jpg" alt="cake" class="menu-image" />
+          <img src="Images/cake-4-min.jpg" alt="cake" class="menu-image" />
           <h4 class="heading-4">lavender cake</h4>
           <p>small events serves 8 people.</p>
         </div>
@@ -148,7 +148,7 @@
           data-aos-duration="500"
         >
           <img
-            src="/Images/cheesecake-1-min.jpg"
+            src="Images/cheesecake-1-min.jpg"
             alt="cake"
             class="menu-image"
           />
@@ -157,7 +157,7 @@
         </div>
         <div class="menu-item-list" data-aos="zoom-in-down">
           <img
-            src="/Images/cheesecake-2-min.jpg"
+            src="Images/cheesecake-2-min.jpg"
             alt="cake"
             class="menu-image"
           />
@@ -165,13 +165,13 @@
           <p>Vanilla with blueberry blast.</p>
         </div>
         <div class="menu-item-list" data-aos="zoom-in-down">
-          <img src="/Images/cookies-min.jpg" alt="cake" class="menu-image" />
+          <img src="Images/cookies-min.jpg" alt="cake" class="menu-image" />
           <h4 class="heading-4">Cookies</h4>
           <p>Cream filled chocolate chip cookies.</p>
         </div>
         <div class="menu-item-list" data-aos="zoom-in-down">
           <img
-            src="/Images/cheesecake-3-min.jpg"
+            src="Images/cheesecake-3-min.jpg"
             alt="cake"
             class="menu-image"
           />
@@ -179,27 +179,27 @@
           <p>Raspberry base with creamy vanilla</p>
         </div>
         <div class="menu-item-list" data-aos="zoom-in-down">
-          <img src="/Images/cookies-1-min.jpg" alt="cake" class="menu-image" />
+          <img src="Images/cookies-1-min.jpg" alt="cake" class="menu-image" />
           <h4 class="heading-4">Macrons</h4>
           <p>variety of macrons to choose from.</p>
         </div>
         <div class="menu-item-list" data-aos="zoom-in-down">
-          <img src="/Images/muffin-min.jpg" alt="cake" class="menu-image" />
+          <img src="Images/muffin-min.jpg" alt="cake" class="menu-image" />
           <h4 class="heading-4">Muffin</h4>
           <p>Chocolate muffin topped with dark chocolate chips.</p>
         </div>
         <div class="menu-item-list" data-aos="zoom-in-down">
-          <img src="/Images/cupcake-1-min.jpg" alt="cake" class="menu-image" />
+          <img src="Images/cupcake-1-min.jpg" alt="cake" class="menu-image" />
           <h4 class="heading-4">Cupcake</h4>
           <p>Creamy strawberry cupcake.</p>
         </div>
         <div class="menu-item-list" data-aos="zoom-in-down">
-          <img src="/Images/donut-min.jpg" alt="cake" class="menu-image" />
+          <img src="Images/donut-min.jpg" alt="cake" class="menu-image" />
           <h4 class="heading-4">Donut</h4>
           <p>Freshly homemade variety of donuts.</p>
         </div>
         <div class="menu-item-list" data-aos="zoom-in-down">
-          <img src="/Images/parfait-min.jpg" alt="cake" class="menu-image" />
+          <img src="Images/parfait-min.jpg" alt="cake" class="menu-image" />
           <h4 class="heading-4">Parfait</h4>
           <p>Traditionaly made french style.</p>
         </div>
@@ -210,12 +210,12 @@
     <!----- Catering section  ----->
     <section id="promo" class="summer-promo">
       <div class="heading-secondary">
-        <img class="heading-top" src="/Images/heading-top.svg" alt="cone" />
+        <img class="heading-top" src="Images/heading-top.svg" alt="cone" />
         <h2>Catering</h2>
       </div>
       <div class="promo-card">
         <div class="promo-card-1" data-aos="flip-right">
-          <img src="/Images/small-event.svg" alt="icon" class="promo-icons" />
+          <img src="Images/small-event.svg" alt="icon" class="promo-icons" />
           <h4 class="promo-heading">Small event</h4>
           <p class="people">10 people max</p>
           <h3 class="promo-heading-3">$49.99</h3>
@@ -232,7 +232,7 @@
 
         <div class="promo-card-2" data-aos="flip-right">
           <img
-            src="/Images/birthday-event.svg"
+            src="Images/birthday-event.svg"
             alt="icon"
             class="promo-icons"
           />
@@ -251,7 +251,7 @@
         </div>
 
         <div class="promo-card-3" data-aos="flip-right">
-          <img src="/Images/wedding-event.svg" alt="icon" class="promo-icons" />
+          <img src="Images/wedding-event.svg" alt="icon" class="promo-icons" />
           <h4 class="promo-heading">Large events</h4>
           <p class="people">50 people max</p>
           <h3 class="promo-heading-3">$199.99</h3>
@@ -275,7 +275,7 @@
         <div class="review-1">
           <img
             class="review-img-1"
-            src="/Images/review-1-min.jpg"
+            src="Images/review-1-min.jpg"
             alt="customer"
           />
           <p class="review-para">
@@ -288,7 +288,7 @@
         <div class="review-2">
           <img
             class="review-img-1"
-            src="/Images/review-2-min.jpg"
+            src="Images/review-2-min.jpg"
             alt="customer"
           />
           <p class="review-para">
@@ -301,7 +301,7 @@
         <div class="review-3">
           <img
             class="review-img-1"
-            src="/Images/review-3-min.jpg"
+            src="Images/review-3-min.jpg"
             alt="customer"
           />
           <p class="review-para">
@@ -318,7 +318,7 @@
     <!----- Our Team ----->
     <section id="contact" class="about-shop">
       <div class="heading-secondary">
-        <img class="heading-top" src="/Images/heading-top.svg" alt="cone" />
+        <img class="heading-top" src="Images/heading-top.svg" alt="cone" />
         <h2>Contact Us</h2>
       </div>
       <div class="about-grid">
@@ -327,28 +327,28 @@
             <div class="member-1">
               <img
                 class="team-img"
-                src="/Images/business-owner-min.jpg"
+                src="Images/business-owner-min.jpg"
                 alt="team"
               />
               <h4 class="team-name">George smith</h4>
               <p class="team-occ">Business Owner</p>
             </div>
             <div class="member-2">
-              <img class="team-img" src="/Images/manager-min.jpg" alt="team" />
+              <img class="team-img" src="Images/manager-min.jpg" alt="team" />
               <h4 class="team-name">Martha Gray</h4>
               <p class="team-occ">Manager</p>
             </div>
             <div class="member-3">
               <img
                 class="team-img"
-                src="/Images/head-chef-min.jpg"
+                src="Images/head-chef-min.jpg"
                 alt="team"
               />
               <h4 class="team-name">Mark William</h4>
               <p class="team-occ">Head Chef</p>
             </div>
             <div class="member-3">
-              <img class="team-img" src="/Images/baker-min.jpg" alt="team" />
+              <img class="team-img" src="Images/baker-min.jpg" alt="team" />
               <h4 class="team-name">Mark William</h4>
               <p class="team-occ">Head Chef</p>
             </div>
@@ -360,13 +360,13 @@
             <div class="about-grid-2">
               <div class="about-grid-1">
                 <div class="address-1">
-                  <img src="/Images/mail-us.svg" alt="mail" class="us icon-1" />
+                  <img src="Images/mail-us.svg" alt="mail" class="us icon-1" />
                   <h3 class="about-heading">Email Us</h3>
                   <p class="about-info">abc@gmail.com</p>
                 </div>
                 <div class="address-2">
                   <img
-                    src="/Images/visit-us.svg"
+                    src="Images/visit-us.svg"
                     alt="location"
                     class="us icon-2"
                   />
@@ -376,7 +376,7 @@
                   </p>
                 </div>
                 <div class="address-3">
-                  <img src="/Images/call-us.svg" alt="call" class="us icon-3" />
+                  <img src="Images/call-us.svg" alt="call" class="us icon-3" />
                   <h3 class="about-heading">Call Us</h3>
                   <p class="about-info">+1 222-333-4444</p>
                 </div>
@@ -422,7 +422,7 @@
       </div>
       <div class="logo-footer">
         <a href="#home"
-          ><img src="/Images/main-logo.svg" alt="logo" class="logo"
+          ><img src="Images/main-logo.svg" alt="logo" class="logo"
         /></a>
       </div>
       <div class="social-media">
@@ -430,28 +430,28 @@
         <ul>
           <li class="social-link">
             <img
-              src="/Images/facebook.svg"
+              src="Images/facebook.svg"
               alt="facebook"
               class="s-link facebook"
             />
           </li>
           <li class="social-link">
             <img
-              src="/Images/instagram.svg"
+              src="Images/instagram.svg"
               alt="instagram"
               class="s-link instagram"
             />
           </li>
           <li class="social-link">
             <img
-              src="/Images/twitter-1.svg"
+              src="Images/twitter-1.svg"
               alt="twitter-1"
               class="s-link twitter"
             />
           </li>
           <li class="social-link">
             <img
-              src="/Images/whatsapp.svg"
+              src="Images/whatsapp.svg"
               alt="whatsapp"
               class="s-link whatsapp"
             />
