--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
       rel="stylesheet"
     />
 
-    <link rel="stylesheet" type="text/css" href="/style.css" />
+    <link rel="stylesheet" type="text/css" href="style.css" />
     <title>Bake & cake</title>
   </head>
   <body class="container">
@@ -27,7 +27,7 @@
     <section id="home" class="navbar">
       <div class="nav-flex" data-aos="fade-down" data-aos-offset="0">
         <a href="#home"
-          ><img src="Images/main-logo.svg" alt="logo" class="icon"
+          ><img src="/Images/main-logo.svg" alt="logo" class="icon"
         /></a>
 
         <a href="#" class="toggle-button">
