--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     <section id="home" class="navbar">
       <div class="nav-flex" data-aos="fade-down" data-aos-offset="0">
         <a href="#home"
-          ><img src="/Images/main-logo.svg" alt="logo" class="icon"
+          ><img src="Images/main-logo.svg" alt="logo" class="icon"
         /></a>
 
         <a href="#" class="toggle-button">
