--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
       name="description"
       content="A bakery full of all of your favourite desserts. Famous for cakes and cheesecakes"
     />
-    <link rel="icon" href="/Images/main-logo.svg" />
+    <link rel="icon" href="Images/main-logo.svg" />
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.0.0/animate.min.css"
