--- a/index.html
+++ b/index.html
@@ -30,11 +30,11 @@
           ><img src="Images/main-logo.svg" alt="logo" class="icon"
         /></a>
 
-        <a href="#" class="toggle-button">
+        <div class="toggle-button">
           <span class="bar"></span>
           <span class="bar"></span>
           <span class="bar"></span>
-        </a>
+        </div>
 
         <ul class="nav-list">
           <li class="nav-links"><a href="#">Home</a></li>
